# gushi_k12

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: DEVELOPMENT_PLAN.md  REQUIREMENTS.md
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AIAssistant.tsx  Layout.tsx  PinyinText.tsx  PoemContent.tsx  RecitationDialog.tsx  ReciteDialog.tsx  RecordsModal.tsx  StudyReciteDialog.tsx  TextSelectionToolbar.tsx
src/data/: collections.json  poems.json  poems_highschool.json
src/hooks/: usePoems.ts
src/lib/: ai.ts  character.ts  db.ts  poems.ts  recitation.ts  studyPlan.ts
src/pages/: AiSettings.tsx  GameRecords.tsx  Home.tsx  PoemChain.tsx  PoemDetail.tsx  PoemFill.tsx  PoemList.tsx  PoemMatch.tsx  PoemPuzzle.tsx  PoemRain.tsx  PoemSort.tsx  Progress.tsx  RecitationMode.tsx  Review.tsx  Settings.tsx  StudyPlan.tsx  Tools.tsx  Users.tsx
src/store/: index.ts  selection.ts  ui.ts  user.ts
